# ml-recommendation-engine

./: README.md
ML Recommendation Engine/: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Implementation of Real-Time Streaming System (Priority 1).md  Makefile  README.md  docker-compose.yml  gap_analysis.md  implementation.md  plan_output.txt  production_plan.md  pyproject.toml
ML Recommendation Engine/.claude/: settings.local.json
ML Recommendation Engine/.devcontainer/: devcontainer.json
ML Recommendation Engine/.github/workflows/: ci-cd.yml  security-scan.yml
ML Recommendation Engine/docs/adr/: 001-defer-go-sidecar.md
ML Recommendation Engine/infrastructure/argocd/: application.yaml
ML Recommendation Engine/infrastructure/docker/: Dockerfile.ranking  Dockerfile.serving
ML Recommendation Engine/infrastructure/kubernetes/: network-policies.yaml  ranking-deployment.yaml  services-deployment.yaml  serving-deployment.yaml
ML Recommendation Engine/infrastructure/terraform/: kafka.tf  main.tf  multi-region.tf  outputs.tf  variables.tf  vault.tf
ML Recommendation Engine/infrastructure/vault/: policies.hcl
ML Recommendation Engine/ml/evaluation/: evaluator.py
ML Recommendation Engine/ml/features/: data_validation.py  feature_dsl.py
ML Recommendation Engine/ml/pipelines/: data_purge.py  training_pipeline.py
ML Recommendation Engine/monitoring/: alertmanager.yml  keda.yaml  pprof.yaml  prometheus.yml
ML Recommendation Engine/monitoring/alerts/: recommendation-alerts.yml
ML Recommendation Engine/streaming/: flink-conf.yaml
(+135 files in other folders)
