# ============================================================================
# pyproject.toml — Project Configuration
# ============================================================================

[project]
name = "recommendation-engine"
version = "2.3.1"
description = "Real-time ML recommendation system"
requires-python = ">=3.12"

[tool.uv]
workspace = ["services/*", "ml/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --cov=services --cov=ml --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true